--- a/index.html
+++ b/index.html
@@ -1,93 +1,137 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Classic Battery Shop. One stop shop for all sorts of batteries.</title>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-		<style>
-	*{
-	margin: 0px;
-	padding:0px;
-	box-sizing: border-box;
-	font-family: 'Roboto', sans-serif;
-	color: #231f20;
-	text-decoration: none;
-	list-style: none;
-}
-html, body{
-	height: 100%;
-}
-a:focus, input:focus{
-	outline: none;
-}
-img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-.logo{
-	width: 210px;
-}
-h2{
-	font-size: 35px;
-    margin-bottom: 7px;
-    font-weight: 900;
-    margin-top: 120px;
-}
-h4{
-	font-size: 22px;
-    font-weight: 400;
-}
-h3 {
-	text-align: center;
-    margin-top: 16px;
-}
-h3 span {
-    font-size: 30px;
-    margin: 0 10px;
-    font-weight: 300;
-    text-align: center;
-}
-
-
-section.home {
-    min-height: 100vh;
-    background-color: #fff;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    position: relative;
-    top: -5vh;
-}
-.plug {
-    position: absolute;
-    bottom: 7vh;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-.plug img {
-    width: 100%;
-}
-
-</style>
+	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Indar - MERN Stack Developer</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/home.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+	<!-- <link rel="stylesheet" href="assets/css/docs.theme.min.css"> -->
+	 <!-- Owl Stylesheets -->
+    <link rel="stylesheet" href="assets/owlcarousel/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/owlcarousel/assets/owl.theme.default.min.css">
+    <!-- javascript -->
+    <script src="assets/vendors/jquery.min.js"></script>
+    <script src="assets/owlcarousel/owl.carousel.js"></script>
 </head>
 <body>
+<header>
+	<a href="index.html"><img src="images/logo.png" class="logoDesk" alt="" /></a>
+	<ul>
+		<li><a href="about.html">About</a></li>
+		<li><a href="work.html">Demos</a></li>
+		<li><a href="blog.html">Blogs</a></li>
+		<li><a href="contact.html">Contact</a></li>
+	</ul>
+</header>
 
-<section class="home">
-	<img class="logo" src="logo.png" alt="" />
-	<h3><span>Classic.</span><span>Battery.</span><span>Shop.</span></h3>
-	<h2>We are currently working on our new website. </h2> 
-	<h4>We will be back soon.</h4>
-	
+<section class="homePageBannerSection">
+		<div class="homeBannerHolder" id="demos">
+			<div class="owl-carousel owl-theme">
+            <div class="item">
+            </div>
+            <div class="item">
+            </div>
+            <div class="item">
+            </div>
+            <div class="item">
+            </div>
+          </div>
+			<div>
+			<img src="">
+			<h1></h1>
+			<div>
+		</div>
+
 </section>
-<div class="plug">
-		<img src="plug.png" alt="" />
-	</div>
+<section>
+	<div class="aboutHolder">
+	<!-- <h2 class="sectionHeading bottomBar">
+		About
+	</h2> -->
+	<p>Classic Battery Shoppe in Sirsa-haryana is one of the leading businesses in the Automobile Battery Dealers. Also known for Electric Bicycle Dealers, Inverter Battery Dealers, Battery Dealers, Battery Operated Motorcycle Dealers, Inverter Battery Dealers-Luminous, Battery Operated Auto Rickshaw Dealers, Battery Operated Scooter Dealers, Battery Dealers-Exide and much more.</p>
+		</div>
+</section>
+<ul class="listBlocks">
+		<li>
+			<a href="">
+				<h3>Lorem Ipsum</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque id diam ut risus feugiat viverra.</p>
+			</a>
+			<img src="images/side-1.jpg" alt="" />
+		</li>
+		<li>
+			<a href="">
+				<h3>Lorem Ipsum</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque id diam ut risus feugiat viverra.</p>
+			</a>
+			<img src="images/side-2.jpg" alt="" />
+		</li>
+		<li>
+			<a href="">
+				<h3>Lorem Ipsum</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque id diam ut risus feugiat viverra.</p>
+			</a>
+			<img src="images/side-3.jpg" alt="" />
+		</li>
+	</ul>
+<section>
+	<div class="genSection">
+	<h2 class="sectionHeading bottomBar">
+	Phasellus vel dapibus turpis
+	</h2>
+	<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque id diam ut risus feugiat viverra.</p> <p>Integer semper, justo ac pulvinar venenatis, tortor est condimentum erat, nec rutrum nibh quam vel ex. Vestibulum quis elit vel odio sodales mollis cursus sit amet massa. Etiam a maximus purus. Sed venenatis ex et turpis molestie, eget porta urna ultricies. Phasellus tincidunt mauris id tortor lacinia, at condimentum magna pellentesque. </p>
+</div>
+<div class="blockSection">
+	<h2 class="sectionHeading">
+	Lorem ipsum dolor adipiscing elit.
+	</h2>
+	<p>Integer semper, justo ac pulvinar venenatis, tortor est condimentum erat, nec rutrum nibh quam vel ex. </p>
+</div>	
+</section>
 
+<section>
+	<div class="genSection">
+	<h2 class="sectionHeading bottomBar">
+	Phasellus vel dapibus turpis
+	</h2>
+	<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque id diam ut risus feugiat viverra.</p> <p>Integer semper, justo ac pulvinar venenatis, tortor est condimentum erat, nec rutrum nibh quam vel ex. Vestibulum quis elit vel odio sodales mollis cursus sit amet massa. Etiam a maximus purus. Sed venenatis ex et turpis molestie, eget porta urna ultricies. Phasellus tincidunt mauris id tortor lacinia, at condimentum magna pellentesque. </p>
+</div>
+<div class="videoBlock">
+	
+</div>	
+</section>
+
+<footer>
+	<!-- <img src="images/logo-red.png" alt="" /> -->
+	<p>Copyright © <script>document.write(new Date().getFullYear())</script> <a href="index.html">CBS</a>. All Rights Reserved.</p>
+</footer>
+
+
+
+<!-- <script type="text/javascript" src="script/jquery-2.1.0.min.js"></script> -->
+<script>
+            $(document).ready(function() {
+              $('.owl-carousel').owlCarousel({
+                items: 1,
+                margin: 0,
+                touchDrag: true,
+                autoplay: true,
+                rewind: true,
+                // nav: true,
+              });
+            })
+          </script>
+<!-- vendors -->
+   <!--  <script src="assets/vendors/highlight.js"></script>
+    <script src="assets/js/app.js"></script> -->
+
+<script type="text/javascript" src="script/common.js"></script>
 
 </body>
 </html>
