temp with lorem ipsum

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Indar - MERN Stack Developer</title>
+	<title>Classic Battery Shop - One stop shop for all sorts of batteries. </title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/about.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
@@ -11,75 +11,87 @@
 </head>
 <body>
 <header>
-	<a href="index.html"><img src="images/logo-white.png" class="logoDesk" alt="" /><img src="images/logo-white-mob.png" class="logoMob" alt="" /> </a>
+	<a href="index.html"><img src="images/logo.png" class="Classic Battery Shop" alt="" /></a>
 	<ul>
-		<li><a href="about.html" class="active">About</a></li>
-		<li><a href="work.html">Demos</a></li>
-		<li><a href="blog.html">Blogs</a></li>
+		<li><a class="active" href="about.html">About</a></li>
+		<li><a href="services.html">Services</a></li>
+		<li><a href="clients.html">Clients</a></li>
 		<li><a href="contact.html">Contact</a></li>
 	</ul>
 </header>
 
 
 <section class="aboutSection">
-	<div class="bodyContainer">
-		<div class="aboutContent">
-			<h2 class="sectionHeading">Who am I?</h2>
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
-
-			<p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages.</p>
-			
-		
-		</div>
-		<div class="aboutImage">
-			<div class="imgHolder">
-				<img src="images/indar-small.jpg" alt="" />
-			</div>
-		</div>
+	<div class="pageBanner aboutBanner">
 	</div>
-</section>
-
-<section class="skillsSection">
-	<div class="skillsContainer">
-		<ul class="mern">
-			<li>MongoDB</li>
-			<li>Express</li>
-			<li>React</li>
-			<li>NodeJS</li>
-		</ul>
-		<ul class="front-end">
-			<li>HTML5</li>
-			<li>CSS3</li>
-			<li>JavaScript</li>
-			<li>Jquery</li>
-			<li>PhotoShop</li>
-		</ul>
-
+	<div class="aboutContent">
+		<h2 class="sectionHeading bottomBar">
+			About Us
+		</h2>
+		<h3>Classic Battery Shoppe in Sirsa-haryana is one of the leading businesses in the Automobile Battery Dealers. </h3>
+		<p>Also known for Electric Bicycle Dealers, Inverter Battery Dealers, Battery Dealers, Battery Operated Motorcycle Dealers, Inverter Battery Dealers-Luminous, Battery Operated Auto Rickshaw Dealers, Battery Operated Scooter Dealers, Battery Dealers-Exide and much more.</p>
+	</div>
+	<ul class="listBlocks">
+		<li>
+			<a href="">
+				<h3>Lorem Ipsum</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+			</a>
+			<img src="images/1.jpg" alt="" />
+		</li>
+		<li>
+			<a href="">
+				<h3>Lorem Ipsum</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+			</a>
+			<img src="images/2.jpg" alt="" />
+		</li>
+		<li>
+			<a href="">
+				<h3>Lorem Ipsum</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+			</a>
+			<img src="images/3.jpg" alt="" />
+		</li>
+		
+	</ul>
+	<div class="secondAboutContentBlock">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla commodo tortor nec nibh consectetur accumsan. In et elit sapien. Curabitur euismod ante gravida velit blandit, quis pulvinar lorem luctus. </p><p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla vitae velit lobortis, tristique turpis eget, dignissim ante. Aenean vitae velit sollicitudin, mollis elit id, volutpat augue. Suspendisse eget nisi fermentum, commodo sem in, semper urna.</p>
 	</div>
 	
 </section>
-<section class="aboutSection secondBlock">
-	<div class="bodyContainer">
-		<div class="aboutImage">
-			<div class="imgHolder">
-				<img src="images/about-small.jpg" alt="" />
+<section class="teamSection">
+	<div class="teamContent">
+	<h2 class="sectionHeading bottomBar">
+			Management
+		</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla commodo tortor nec nibh consectetur accumsan. In et elit sapien. Curabitur euismod ante gravida velit blandit, quis pulvinar lorem luctus. </p>
+	</div>
+	<div class="teamContainer">
+		<div class="teamBlock">
+			<div class="profileImage">
+				<img src="images/profile.jpg" alt="" />
 			</div>
+			<h2><span>Rajan</span> Narang</h2>
+			<h4>Co-founder and CEO</h4>
+			<h6>Duis id metus a orci tincidunt ultrices. Donec sodales condimentum dolor. </h6>
 		</div>
-		<div class="aboutContent">
-			<h2 class="sectionHeading">Who am I?</h2>
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
-
-			<p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages.</p>
-			
-		
+		<div class="teamBlock">
+			<div class="profileImage">
+				<img src="images/profile2.jpg" alt="" />
+			</div>
+			<h2><span>Madhur</span> Narang</h2>
+			<h4>Co-founder and Director</h4>
+			<h6>Duis id metus a orci tincidunt ultrices. Donec sodales condimentum dolor. </h6>
 		</div>
-		
 	</div>
 </section>
 
 
+
 <footer>
-	<p>Copyright © <a href="index.html">Indar</a> 2018. All Rights Reserved.</p>
+	<!-- <img src="images/logo-red.png" alt="" /> -->
+	<p>Copyright © <script>document.write(new Date().getFullYear())</script> <a href="index.html">CBS</a>. All Rights Reserved.</p>
 </footer>
 
 
