--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Indar - MERN Stack Developer</title>
+	<title>Classic Battery Shop - One stop shop for all sorts of batteries. </title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/home.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
@@ -17,11 +17,11 @@
 </head>
 <body>
 <header>
-	<a href="index.html"><img src="images/logo.png" class="logoDesk" alt="" /></a>
+	<a href="index.html"><img src="images/logo.png" class="Classic Battery Shop" alt="" /></a>
 	<ul>
 		<li><a href="about.html">About</a></li>
-		<li><a href="work.html">Demos</a></li>
-		<li><a href="blog.html">Blogs</a></li>
+		<li><a href="services.html">Services</a></li>
+		<li><a href="clients.html">Clients</a></li>
 		<li><a href="contact.html">Contact</a></li>
 	</ul>
 </header>
