--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 		        <input type="text" id="name" name="name" placeholder="Full Name" required>
 		        <input type="email" id="email" name="email" placeholder="Email" required>
 		        <textarea id="message" name="message" required placeholder="Message"></textarea>
-		        <button type="submit" class="blankButton" value="Submit">Send Message</button>
+		        <button class="button" type="submit" class="blankButton" value="Submit">Send Message</button>
 		     </form>
 		</div>
 		<div class="socialLinks">
