--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
 	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Indar - MERN Stack Developer</title>
+	<title>Classic Battery Shop - One stop shop for all sorts of batteries. </title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/services.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
