--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 		<h2 class="sectionHeading bottomBar">
 			Contact Us
 		</h2>
-		<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla vitae velit lobortis, tristique turpis eget, dignissim ante. Aenean vitae velit sollicitudin, mollis elit id, volutpat augue. Suspendisse eget nisi fermentum, commodo sem in, semper urna.</p>
+		<p>Do reach out to us if you have any sort of queries about batteries. Please send an email, call us or just drop by at our office, we assure you of best conversation and best solution possible. We go above and beyond for our Customers.</p>
 		
 	
 		<div class="contactForm">
