--- a/services.html
+++ b/services.html
@@ -26,8 +26,8 @@
 		<h2 class="sectionHeading bottomBar">
 			Services
 		</h2>
-		<h3>Classic Battery Shoppe in Sirsa-haryana is one of the leading businesses in the Automobile Battery Dealers. </h3>
-		<p>Also known for Electric Bicycle Dealers, Inverter Battery Dealers, Battery Dealers, Battery Operated Motorcycle Dealers, Inverter Battery Dealers-Luminous, Battery Operated Auto Rickshaw Dealers, Battery Operated Scooter Dealers, Battery Dealers-Exide and much more.</p>
+		<h3>Classic Battery Shoppe(CBS) has been one stop shop for all sorts of batteries and embodies values of dependability and trust. These values have been held very sacred by the company in every aspect of its operation and are reiterated in its commitment to all stakeholders, customers.</h3>
+		<p> CBS sells the widest range of lead acid storage batteries ranging from 2.5Ah to 20,600Ah capacity. The broadest spectrum of applications includes automotive, power, telecom, infrastructure projects, computer industries, as well as the railways, mining and defence sectors.</p>
 	</div>
 	<div class="servicesList">
 		<div class="serviceBlock">
