--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 			About Us
 		</h2>
 		<h3>Classic Battery Shoppe in Sirsa-haryana is one of the leading businesses in the Automobile Battery Dealers. </h3>
-		<p>Also known for Electric Bicycle Dealers, Inverter Battery Dealers, Battery Dealers, Battery Operated Motorcycle Dealers, Inverter Battery Dealers-Luminous, Battery Operated Auto Rickshaw Dealers, Battery Operated Scooter Dealers, Battery Dealers-Exide and much more.</p>
+		<p>CBS has wide range of innovative products in the power backup, home electrical and residential solar space that covers, inverters Batteries, Solar solutions. </p>
 	</div>
 	<ul class="listBlocks">
 		<li>
@@ -56,7 +56,8 @@
 		
 	</ul>
 	<div class="secondAboutContentBlock">
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla commodo tortor nec nibh consectetur accumsan. In et elit sapien. Curabitur euismod ante gravida velit blandit, quis pulvinar lorem luctus. </p><p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla vitae velit lobortis, tristique turpis eget, dignissim ante. Aenean vitae velit sollicitudin, mollis elit id, volutpat augue. Suspendisse eget nisi fermentum, commodo sem in, semper urna.</p>
+		<p></p>
+		<p>We have been serving the world from last 25 years and earned millions of happy customers. Our motto has always been Customer Delight through Innovation & Passion with the focus on Execution & Team-work. We go extra miles to serve our customers. This has paved the way for CBS's success across markets. The organization has shown exponential growth over the last 5 years and made its presence felt through broad and white spectrum of products..</p>
 	</div>
 	
 </section>
@@ -65,7 +66,7 @@
 	<h2 class="sectionHeading bottomBar">
 			Management
 		</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla commodo tortor nec nibh consectetur accumsan. In et elit sapien. Curabitur euismod ante gravida velit blandit, quis pulvinar lorem luctus. </p>
+		<p>Our management is comprised of experience and innovation. Rajan has decades of cumulative experience and understands the depth of market where Madhur is young, ingenious and full of crazy ideas. They both together form a great bond to bring innovation and smile on our customer faces.  </p>
 	</div>
 	<div class="teamContainer">
 		<div class="teamBlock">
@@ -73,16 +74,16 @@
 				<img src="images/profile.jpg" alt="" />
 			</div>
 			<h2><span>Rajan</span> Narang</h2>
-			<h4>Co-founder and CEO</h4>
-			<h6>Duis id metus a orci tincidunt ultrices. Donec sodales condimentum dolor. </h6>
+			<h4>Founder and CEO</h4>
+			<h6>Calm, Composed, and Committed. Man with a solution always up the sleeves. </h6>
 		</div>
 		<div class="teamBlock">
 			<div class="profileImage">
 				<img src="images/profile2.jpg" alt="" />
 			</div>
 			<h2><span>Madhur</span> Narang</h2>
-			<h4>Co-founder and Director</h4>
-			<h6>Duis id metus a orci tincidunt ultrices. Donec sodales condimentum dolor. </h6>
+			<h4>Managing Director</h4>
+			<h6>Innovative, imaginative, keen, joyful and a go to person for all our customers.</h6>
 		</div>
 	</div>
 </section>
